k8s/landing-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-portal-deployment
  labels:
    app: landing-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-portal
  template:
    metadata:
      labels:
        app: landing-portal
    spec:
      containers:
      - name: landing-portal
        image: longngu/landing-portal:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: landing-portal-service
spec:
  type: LoadBalancer
  selector:
    app: landing-portal
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
status:
        loadBalancer:
                ingress:
                        - ip: adc1f7a11c5604167ad37c70b515bfb6-1091825041.us-east-1.elb.amazonaws.com
