k8s/transaction.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deployment
  labels:
    app: transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
      - name: transaction
        image: longngu/transaction:cream
        ports:
        - containerPort: 8073
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
spec:
  type: LoadBalancer
  selector:
    app: transaction
  ports:
    - protocol: TCP
      port: 8073
      targetPort: 8073
      nodePort: 30073
